Modify the href

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 					<b>Marital Status:</b> Single
 				</p>
 				<a
-					href="https://github.com/gite360/RuidongXue/blob/master/images/CV_Ruidong%20Xue.pdf"
+					href="https://github.com/gite360/RuidongXue/blob/master/images/CV_RuidongXue.pdf"
 					class="button"> <small>Download</small> My CV.pdf
 				</a>
 			</aside>
