Modify the layout of the code

--- a/index.html
+++ b/index.html
@@ -34,6 +34,27 @@
 
 	<div id="content-wrapper">
 		<div class="inner clearfix">
+			<aside id="sidebar">
+				<img class="img1" src="images/RuidongXue.jpg" art="">
+				<p></p>
+				<p></p>
+				<p>
+					<b>Date of Birth:</b>1994
+				</p>
+				<p>
+					<b>Address:</b> Room6007, Wenhui Road, Shanghai City, China
+				</p>
+				<p>
+					<b>Email:</b> RuidongXue@hotmail.com
+				</p>
+				<p>
+					<b>Marital Status:</b> Single
+				</p>
+				<a
+					href="https://github.com/gite360/RuidongXue/blob/master/images/CV_RuidongXue.pdf"
+					class="button"> <small>Download</small> My CV.pdf
+				</a>
+			</aside>
 			<section id="main-content">
 				<h3>
 					<a id="welcome-to-github-pages" class="anchor"
@@ -41,10 +62,14 @@
 						aria-hidden="true" class="octicon octicon-link"></span></a>Publication
 				</h3>
 
-				<p>Ruidong Xue, Tingting Zhang, Dehua Chen, Jiajin Le, Mehrzad
-					Lavassani,<a href="https://github.com/gite360/RuidongXue/blob/master/images/ICCCI_RuidongXue.pdf"> “Sensor Time Series Association Rule Discovery Based on
-					Modified Discretization Method”.</a> The First IEEE International
-					Conference on Computer Communication and the Internet,2016.</p>
+				<p>
+					Ruidong Xue, Tingting Zhang, Dehua Chen, Jiajin Le, Mehrzad
+					Lavassani,<a
+						href="https://github.com/gite360/RuidongXue/blob/master/images/ICCCI_RuidongXue.pdf">
+						“Sensor Time Series Association Rule Discovery Based on Modified
+						Discretization Method”.</a> The First IEEE International Conference on
+					Computer Communication and the Internet,2016.
+				</p>
 
 				<h3>
 					<a id="designer-templates" class="anchor"
@@ -157,27 +182,7 @@
 				</p>
 			</section>
 
-			<aside id="sidebar">
-				<img class="img1" src="images/RuidongXue.jpg" art="">
-				<p></p>
-				<p></p>
-				<p>
-					<b>Date of Birth:</b>1994
-				</p>
-				<p>
-					<b>Address:</b> Room6007, Wenhui Road, Shanghai City, China
-				</p>
-				<p>
-					<b>Email:</b> RuidongXue@hotmail.com
-				</p>
-				<p>
-					<b>Marital Status:</b> Single
-				</p>
-				<a
-					href="https://github.com/gite360/RuidongXue/blob/master/images/CV_RuidongXue.pdf"
-					class="button"> <small>Download</small> My CV.pdf
-				</a>
-			</aside>
+
 		</div>
 	</div>
 
