Improve the outline

--- a/index.html
+++ b/index.html
@@ -168,8 +168,7 @@
 				<p>
 				<li>Class President, 2014.09-2015.08.</li>
 				<li>The Union minister of Liaison Department in the School of
-					Computer Science and
-					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Technology,2014.09-2015.03.</li>
+					Computer Science and Technology,2014.09-2015.03.</li>
 				<li>Volunteer of the Donghua University 60-year
 					Anniversary,2011.10.</li>
 				<li>Language: English (Work Language) & Mandarin (Native)</li>
