--- a/index.html
+++ b/index.html
@@ -176,6 +176,7 @@
 				<li>Cooking: Chinese food.</li>
 				<li>Sporting: Fitness in gym.</li>
 				<li>GRE: 311</li>
+				<li>TOEFL: 85</li>
 				<li>CET-6: 492</li>
 				<li>CST-4: 559</li>
 				</p>
