Change the reference of Paper

--- a/index.html
+++ b/index.html
@@ -50,8 +50,9 @@
 				<p>
 					<b>Marital Status:</b> Single
 				</p>
-				<a
-					href="https://github.com/gite360/RuidongXue/blob/master/images/CV_RuidongXue.pdf"
+				<a>
+					<!--href="https://github.com/gite360/RuidongXue/blob/master/images/CV_RuidongXue.pdf"-->
+					href="http://ieeexplore.ieee.org/document/7778907/"
 					class="button"> <small>Download</small> My CV.pdf
 				</a>
 			</aside>
@@ -176,7 +177,7 @@
 				<li>Cooking: Chinese food.</li>
 				<li>Sporting: Fitness in gym.</li>
 				<li>GRE: 311</li>
-				<li>TOEFL: 85</li>
+				<li>TOEFL: 90</li>
 				<li>CET-6: 492</li>
 				<li>CST-4: 559</li>
 				</p>
