Change the reference of the paper

--- a/index.html
+++ b/index.html
@@ -50,9 +50,8 @@
 				<p>
 					<b>Marital Status:</b> Single
 				</p>
-				<a>
-					<!--href="https://github.com/gite360/RuidongXue/blob/master/images/CV_RuidongXue.pdf"-->
-					href="http://ieeexplore.ieee.org/document/7778907/"
+				<a
+					href="https://github.com/gite360/RuidongXue/blob/master/images/CV_RuidongXue.pdf"
 					class="button"> <small>Download</small> My CV.pdf
 				</a>
 			</aside>
@@ -65,8 +64,8 @@
 
 				<p>
 					Ruidong Xue, Tingting Zhang, Dehua Chen, Jiajin Le, Mehrzad
-					Lavassani,<a
-						href="https://github.com/gite360/RuidongXue/blob/master/images/ICCCI_RuidongXue.pdf">
+					Lavassani,<!-- <a href="https://github.com/gite360/RuidongXue/blob/master/images/ICCCI_RuidongXue.pdf"> -->
+					<a href="http://ieeexplore.ieee.org/document/7778907/">
 						“Sensor Time Series Association Rule Discovery Based on Modified
 						Discretization Method”.</a> The First IEEE International Conference on
 					Computer Communication and the Internet,2016.
