--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 				<li>Cooking: Chinese food.</li>
 				<li>Sporting: Fitness in gym.</li>
 				<li>GRE: 311</li>
-				<li>TOEFL: 90</li>
+				<li>TOEFL: 95. Reading:27, Listening:25, Speaking:19, Writing: 24</li>
 				<li>CET-6: 492</li>
 				<li>CST-4: 559</li>
 				</p>
