Update GRE Score

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 				<li>Chinese driver’s license: C1.</li>
 				<li>Cooking: Chinese food.</li>
 				<li>Sporting: Fitness in gym.</li>
-				<li>GRE: 311</li>
+				<li>GRE: 311. Verbal Reading:148, Quantative Reasoning:163, Analytical Writing: 3</li>
 				<li>TOEFL: 95. Reading:27, Listening:25, Speaking:19, Writing: 24</li>
 				<li>CET-6: 492</li>
 				<li>CST-4: 559</li>
