--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 					<b>Marital Status:</b> Single
 				</p>
 				<a
-					href="https://github.com/gite360/RuidongXue/blob/master/images/CV_RuidongXue.pdf"
+					href="https://github.com/gite360/RuidongXue/blob/master/images/CV_Ruidong Xue.pdf"
 					class="button"> <small>Download</small> My CV.pdf
 				</a>
 			</aside>
