Modify the mistake

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 				<li>Sporting: Fitness in gym.</li>
 				<li>GRE: 311. Verbal Reading:148, Quantative Reasoning:163, Analytical Writing: 3</li>
 				<li>TOEFL: 95. Reading:27, Listening:25, Speaking:19, Writing: 24</li>
-				<li>CET-6: 492. Reading:200, Listening:171, comprehensive:30, Writing:91</li>
+				<li>CET-6: 492. Reading:200, Listening:171, Comprehensive:30, Writing:91</li>
 				<li>CST-4: 559</li>
 				</p>
 			</section>
