--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
 					<b>Date of Birth:</b>1994
 				</p>
 				<p>
-					<b>Address:</b> Room6007, Wenhui Road, Shanghai City, China
+					<b>Address:</b> Birmingham, UK
 				</p>
 				<p>
-					<b>Email:</b> RuidongXue@hotmail.com
+					<b>Email:</b> xuer@aston.ac.uk
 				</p>
 				<p>
 					<b>Marital Status:</b> Single
