Add Final paper in MIUN

--- a/index.html
+++ b/index.html
@@ -70,6 +70,12 @@
 						Discretization Method”.</a> The First IEEE International Conference on
 					Computer Communication and the Internet,2016.
 				</p>
+				
+				<p>
+					Ruidong Xue<!-- <a href="https://github.com/gite360/RuidongXue/blob/master/images/ICCCI_RuidongXue.pdf"> -->
+					<a href="http://miun.diva-portal.org/smash/record.jsf?pid=diva2%3A974561&dswid=5962">
+						“Improved association rule mining to sensor time series”.</a> Independent thesis Advanced level (degree of Master (Two Years)), 20 credits / 30 HE credits
+				</p>
 
 				<h3>
 					<a id="designer-templates" class="anchor"
