--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 				</p>
 				
 				<p>
-					Ruidong Xue<!-- <a href="https://github.com/gite360/RuidongXue/blob/master/images/ICCCI_RuidongXue.pdf"> -->
+					Ruidong Xue, <!-- <a href="https://github.com/gite360/RuidongXue/blob/master/images/ICCCI_RuidongXue.pdf"> -->
 					<a href="http://miun.diva-portal.org/smash/record.jsf?pid=diva2%3A974561&dswid=5962">
 						“Improved association rule mining to sensor time series”.</a> Independent thesis Advanced level (degree of Master (Two Years)), 20 credits / 30 HE credits
 				</p>
