--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
 				<p>
 					Ruidong Xue, Tingting Zhang, Dehua Chen, Jiajin Le, Mehrzad
-					Lavassani,<!-- <a href="https://github.com/gite360/RuidongXue/blob/master/images/ICCCI_RuidongXue.pdf"> -->
+					Lavassani.<!-- <a href="https://github.com/gite360/RuidongXue/blob/master/images/ICCCI_RuidongXue.pdf"> -->
 					<a href="http://ieeexplore.ieee.org/document/7778907/">
 						“Sensor Time Series Association Rule Discovery Based on Modified
 						Discretization Method”.</a> The First IEEE International Conference on
