Add supervisor name

--- a/index.html
+++ b/index.html
@@ -85,16 +85,16 @@
 				
                                 <p>
 					<b>Ph.D. candidate</b>,  Computer Science Research Group, School 
-					of Engineering and Applied Science, Aston University, 2018.01-present.
+					of Engineering and Applied Science, Aston University, 2018.01-now. Supervisor: Dr Weiren Yu.
 				</p>
 				
 				<p>
 					<b>Master</b> (exchange student), Department of Information and
-					Communication Systems, Mid Sweden University, 2015.08-2016.06.
+					Communication Systems, Mid Sweden University, 2015.08-2016.06. Supervisor: Prof Tingting Zhang.
 				</p>
 				<p>
 					<b>Master</b>, School of Computer Science and Technology, Donghua
-					University, 2014.09-2017.03.
+					University, 2014.09-2017.03. Supervisor: Prof Jiajin Le.
 				</p>
 				<p>
 					<b>Bachelor</b>, School of Computer Science and Technology, Donghua
