Add University hyperlink

--- a/index.html
+++ b/index.html
@@ -85,16 +85,16 @@
 				
                                 <p>
 					<b>Ph.D. candidate</b>,  Computer Science Research Group, School 
-					of Engineering and Applied Science, Aston University, 2018.01-now. Supervisor: Assistant Professor<a href="http://www.aston.ac.uk/eas/staff/a-z/dr-weiren-yu/"> Weiren Yu </a>.
+					of Engineering and Applied Science, <a href="http://www.aston.ac.uk/">Aston University </a>, 2018.01-now. Supervisor: Assistant Professor<a href="http://www.aston.ac.uk/eas/staff/a-z/dr-weiren-yu/"> Weiren Yu </a>.
 				</p>
 				
 				<p>
 					<b>Master</b> (exchange student), Department of Information and
-					Communication Systems, Mid Sweden University, 2015.08-2016.06. Supervisor: Professor<a href="https://www.miun.se/Personal/tingtingzhang/"> Tingting Zhang </a>.
+					Communication Systems,<a href="https://www.miun.se/en/"> Mid Sweden University </a>, 2015.08-2016.06. Supervisor: Professor<a href="https://www.miun.se/Personal/tingtingzhang/"> Tingting Zhang </a>.
 				</p>
 				<p>
-					<b>Master</b>, School of Computer Science and Technology, Donghua
-					University, 2014.09-2017.03. Supervisor: Professor<a href="http://www.dhu.edu.cn/_t1865/e7/c5/c5961a59333/pagem.psp"> Jiajin Le </a>.
+					<b>Master</b>, School of Computer Science and Technology, <a href="http://english.dhu.edu.cn/">Donghua
+					University </a>, 2014.09-2017.03. Supervisor: Professor<a href="http://www.dhu.edu.cn/_t1865/e7/c5/c5961a59333/pagem.psp"> Jiajin Le </a>.
 				</p>
 				<p>
 					<b>Bachelor</b>, School of Computer Science and Technology, Donghua
