--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
 					University </a>, 2014.09-2017.03. Supervisor: Professor<a href="http://www.dhu.edu.cn/_t1865/e7/c5/c5961a59333/pagem.psp"> Jiajin Le </a>.
 				</p>
 				<p>
-					<b>Bachelor</b>, School of Computer Science and Technology, Donghua
-					University, 2010.09-2014.06. (Overall GPA 3.76/5.0, Rank in major:
+					<b>Bachelor</b>, School of Computer Science and Technology, <a href="http://english.dhu.edu.cn/">Donghua
+					University</a>, 2010.09-2014.06. (Overall GPA 3.76/5.0, Rank in major:
 					Top 5%)
 				</p>
 
@@ -110,13 +110,13 @@
 				</h3>
 				
 				<p>
-					<b>2018.01 - present	Research Computer Science</b> .
+					<b>2018.01 - present,	Research Computer Science</b> .
 					<!--<li>&nbsp;&nbsp;&nbsp;&nbsp;Temporal association rule mining to
 					time series.</li>  -->
 				</p>
 
 				<p>
-					<b>2015.09-2016.06 Final Project</b> for Sensor time series data
+					<b>2015.09-2016.06, Final Project</b> for Sensor time series data
 					mining - Prof. Tingting Zhang, Department of Information and
 					Communication Systems, Mid Sweden University.
 					<!--<li>&nbsp;&nbsp;&nbsp;&nbsp;Temporal association rule mining to
@@ -124,7 +124,7 @@
 				</p>
 
 				<p>
-					<b>2014.11-2015.08 Lab Research</b> for Medical Data Mining - Prof.
+					<b>2014.11-2015.08, Lab Research</b> for Medical Data Mining - Prof.
 					Jiajin Le, School of Computer Science and Technology, Donghua
 					University.
 					<!-- <li>&nbsp;&nbsp;&nbsp;&nbsp;Data mining to the examination and
@@ -132,7 +132,7 @@
 				</p>
 
 				<p>
-					<b>2015.03–2015.07 Teaching Assistant</b> for Object-oriented
+					<b>2015.03–2015.07, Teaching Assistant</b> for Object-oriented
 					Programming and Practice, School of Computer Science and
 					Technology, Donghua University.
 					<!--<li>&nbsp;&nbsp;&nbsp;&nbsp;Grade assignments and exams.</li>
@@ -140,7 +140,7 @@
 					experiment.</li>  -->
 				</p>
 				<p>
-					<b>2014.09-2015.01 Management Assistant</b> for Data Program of
+					<b>2014.09-2015.01, Management Assistant</b> for Data Program of
 					Prof. Jiajin Le, School of Computer Science and Technology, Donghua
 					University.
 					<!--<li>&nbsp;&nbsp;&nbsp;&nbsp;Manage the servers of the every
