--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 				</h3>
 				
 				<p>
-					<b>2018.01 - present,	Research Computer Science</b> .
+					<b>2018.01-now, Research Computer Science</b> .
 					<!--<li>&nbsp;&nbsp;&nbsp;&nbsp;Temporal association rule mining to
 					time series.</li>  -->
 				</p>
