--- a/index.html
+++ b/index.html
@@ -67,14 +67,14 @@
 					Lavassani.<!-- <a href="https://github.com/gite360/RuidongXue/blob/master/images/ICCCI_RuidongXue.pdf"> -->
 					<a href="http://ieeexplore.ieee.org/document/7778907/">
 						“Sensor Time Series Association Rule Discovery Based on Modified
-						Discretization Method”.</a> The First IEEE International Conference on
+						Discretization Method”.</a> The IEEE International Conference on
 					Computer Communication and the Internet,2016.
 				</p>
 				
 				<p>
 					Ruidong Xue, <!-- <a href="https://github.com/gite360/RuidongXue/blob/master/images/ICCCI_RuidongXue.pdf"> -->
 					<a href="http://miun.diva-portal.org/smash/record.jsf?pid=diva2%3A974561&dswid=5962">
-						“Improved association rule mining to sensor time series”.</a> Independent thesis Advanced level (degree of Master (Two Years)), 20 credits / 30 HE credits
+						“Improved association rule mining to sensor time series”.</a> Independent thesis Advanced level (degree of Master (Two Years)), 20 credits / 30 HE credits.
 				</p>
 
 				<h3>
@@ -132,7 +132,7 @@
 				</p>
 
 				<p>
-					<b>2015.03–2015.07, Teaching Assistant</b> for Object-oriented
+					<b>2015.03-2015.07, Teaching Assistant</b> for Object-oriented
 					Programming and Practice, School of Computer Science and
 					Technology, Donghua University.
 					<!--<li>&nbsp;&nbsp;&nbsp;&nbsp;Grade assignments and exams.</li>
