Add project Source Code

--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
 					<a href="http://ieeexplore.ieee.org/document/7778907/">
 						“Sensor Time Series Association Rule Discovery Based on Modified
 						Discretization Method”.</a> The IEEE International Conference on
-					Computer Communication and the Internet,2016.
+					Computer Communication and the Internet,2016. <a href="https://github.com/gite360/161005MIUNProject.git">
+						 System source code.</a>
 				</p>
 				
 				<p>
