--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@
 					href="https://github.com/gite360/RuidongXue/blob/master/images/CV_Ruidong Xue.pdf"
 					class="button"> <small>Download</small> My CV.pdf
 				</a>
+				<a
+					href="https://github.com/gite360/RuidongXue/blob/master/images/CV_Ruidong Xue.pdf"
+					class="button"> <small>Download</small> My CV.pdf
+				</a>
 			</aside>
 			<section id="main-content">
 				<h3>
@@ -69,7 +73,7 @@
 						“Sensor Time Series Association Rule Discovery Based on Modified
 						Discretization Method”.</a> The IEEE International Conference on
 					Computer Communication and the Internet,2016. <a href="https://github.com/gite360/161005MIUNProject.git">
-						 System source code.</a>
+						 System Source Code.</a>
 				</p>
 				
 				<p>
