--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 				</a>
 				<a
 					href="https://github.com/gite360/RuidongXue/blob/master/images/CV_Ruidong Xue.pdf"
-					class="button"> <small>Download</small> My CV.pdf
+					class="button"> <small>Download</small> Project Poster .pdf
 				</a>
 			</aside>
 			<section id="main-content">
