--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 					class="button"> <small>Download</small> My CV.pdf
 				</a>
 				<a
-					href="https://github.com/gite360/RuidongXue/blob/master/images/CV_Ruidong Xue.pdf"
+					href="https://github.com/gite360/RuidongXue/blob/master/images/Poster_Ruidong Xue6.pdf"
 					class="button"> <small>Download</small> Project Poster .pdf
 				</a>
 			</aside>
