Add TA information
(2017-18 CS2410) Internet Applications and Techniques

--- a/index.html
+++ b/index.html
@@ -119,6 +119,14 @@
 					<!--<li>&nbsp;&nbsp;&nbsp;&nbsp;Temporal association rule mining to
 					time series.</li>  -->
 				</p>
+				
+				<p>
+					<b>2018.05-2018.07, Teaching Assistant</b> for (2017-18 CS2410) Internet Applications and Techniques - Dr. Hongxia (Helen) Wang
+					, Group of Computer Science, Aston University.
+					<!-- <li>&nbsp;&nbsp;&nbsp;&nbsp;Data mining to the examination and
+					diagnostic testing data.</li> -->
+				</p>
+
 
 				<p>
 					<b>2015.09-2016.06, Final Project</b> for Sensor time series data
