count page visit times. Add Jquery code

--- a/index.html
+++ b/index.html
@@ -23,6 +23,13 @@
 </head>
 
 <body>
+	<script type="text/javascript">
+                if (localStorage.pagecount){    localStorage.pagecount=Number(localStorage.pagecount) +1;}
+		else{    localStorage.pagecount=1;}document.write("访问数: " + localStorage.pagecount + " time(s).");
+	</script>
+	
+	
+	
 	<header>
 		<div class="inner">
 			<h1 align="right">CV&nbsp;</h1>
