--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <body>
 	<script type="text/javascript">
                 if (localStorage.pagecount){    localStorage.pagecount=Number(localStorage.pagecount) +1;}
-		else{    localStorage.pagecount=1;}document.write("访问数: " + localStorage.pagecount + " time(s).");
+		else{    localStorage.pagecount=1;}document.write("Visit numbers: " + localStorage.pagecount + " time(s).");
 	</script>
 	
 	
