Add research Phd  Proposal

--- a/index.html
+++ b/index.html
@@ -63,6 +63,10 @@
 				</a>
 				<a
 					href="https://github.com/gite360/RuidongXue/blob/master/images/Poster_Ruidong Xue6.pdf"
+					class="button"> <small>Download</small> RP .pdf
+				</a>
+				<a
+					href="https://github.com/gite360/RuidongXue/blob/master/images/Poster_Ruidong Xue6.pdf"
 					class="button"> <small>Download</small> Project Poster .pdf
 				</a>
 			</aside>
