--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 					class="button"> <small>Download</small> My CV.pdf
 				</a>
 				<a
-					href="https://github.com/gite360/RuidongXue/blob/master/images/Poster_Ruidong Xue6.pdf"
+					href="https://github.com/gite360/RuidongXue/blob/master/images/170428Research Proposal_RuidongXue.pdf"
 					class="button"> <small>Download</small> RP .pdf
 				</a>
 				<a
