--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 	<div id="content-wrapper">
 		<div class="inner clearfix">
 			<aside id="sidebar">
-				<img class="img1" src="images/RuidongXue.jpg" art="">
+				<img class="img1" src="images/Suit170927.jpg" art="">
 				<p></p>
 				<p></p>
 				<p>
