--- a/index.html
+++ b/index.html
@@ -178,6 +178,7 @@
 				</h3>
 				<p>
 					<li> <a href="http://www.aston.ac.uk/scholarships/phd-studentships-and-scholarships/anniversary-prize-researchers/">Vice-Chancellor’s International Scholarship</a>(￡30000)&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2017.06</li>
+					<li> <a href="https://github.com/gite360/RuidongXue/blob/master/cn.html">Vice-Chancellor’s International Scholarship</a>(￡30000)&nbsp;&nbsp;&nbsp;2017.06</li>
 					<li>Graduated with honor: University Graduate Excellence Award of Shanghai City 2017.03</li>
 				<li>The honorary title of Candidate DHU
 					Academic-Star&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2016.12</li>
