--- a/cn.html
+++ b/cn.html
@@ -30,7 +30,7 @@
 	
 	<header>
 		<div class="inner">
-			<h1 align="right">个人主页&nbsp;</h1>
+			<h1 align="right">个人主页</h1>
 			<h2 align="right">薛瑞东</h2>
 			<!-- <a href="https://github.com/gite360/RuidongXue" class="button"><img
 				class="img1" src="images/RuidongXue.jpg" art=""></a> -->
@@ -57,15 +57,15 @@
 				</p>
 				<a
 					href="https://github.com/gite360/RuidongXue/blob/master/images/CV_Ruidong Xue.pdf"
-					class="button"> <small>Download</small> My CV.pdf
+					class="button"> <small>Download</small> 个人简历.pdf
 				</a>
 				<a
 					href="https://github.com/gite360/RuidongXue/blob/master/images/170428Research Proposal_RuidongXue.pdf"
-					class="button"> <small>Download</small> RP .pdf
+					class="button"> <small>Download</small> 研究计划.pdf
 				</a>
 				<a
 					href="https://github.com/gite360/RuidongXue/blob/master/images/Poster_Ruidong Xue6.pdf"
-					class="button"> <small>Download</small> Project Poster .pdf
+					class="button"> <small>Download</small> 项目海报.pdf
 				</a>
 			</aside>
 			<section id="main-content">
@@ -88,7 +88,7 @@
 				<p>
 					Ruidong Xue, <!-- <a href="https://github.com/gite360/RuidongXue/blob/master/images/ICCCI_RuidongXue.pdf"> -->
 					<a href="http://miun.diva-portal.org/smash/record.jsf?pid=diva2%3A974561&dswid=5962">
-						“Improved association rule mining to sensor time series”.</a> Independent thesis Advanced level (degree of Master (Two Years)), 20 credits / 30 HE credits.
+						“Improved association rule mining to sensor time series”.</a> 毕设大报告 (硕士 (两年制)), 20 credits / 30 HE credits.
 				</p>
 
 				<h3>
@@ -98,19 +98,19 @@
 				</h3>
 				
                                 <p>
-					<b>博士生在读</b>,  计算机科学组, 工程与应用科学学院, <a href="http://www.aston.ac.uk/">阿斯顿大学 </a>, 2018.01-至今. 导师: 助理教授<a href="http://www.aston.ac.uk/eas/staff/a-z/dr-weiren-yu/"> Weiren Yu </a>.
+					<b>博士生在读</b>,  <a href="http://www.aston.ac.uk/">阿斯顿大学 </a>,工程与应用科学学院,计算机科学组   2018.01-至今. 导师: 助理教授<a href="http://www.aston.ac.uk/eas/staff/a-z/dr-weiren-yu/"> Weiren Yu </a>.
 				</p>
 				
 				<p>
-					<b>硕士</b> (交换生), 信息与通信系,<a href="https://www.miun.se/en/"> 中瑞典大学 </a>, 2015.08-2016.06. 导师: 教授<a href="https://www.miun.se/en/personnel/tingtingzhang/"> 张婷婷 </a>.
+					<b>硕士</b> (交换生), <a href="https://www.miun.se/en/"> 中瑞典大学 </a>,信息与通信系  2015.08-2016.06. 导师: 教授<a href="https://www.miun.se/en/personnel/tingtingzhang/"> 张婷婷 </a>.
 				</p>
 				<p>
-					<b>硕士</b>, 计算机科学与技术学院, <a href="http://english.dhu.edu.cn/">东华大学
-					</a>, 2014.09-2017.03. 导师: 教授<a href="http://www.dhu.edu.cn/_t1865/e7/c5/c5961a59333/pagem.psp">乐嘉锦</a>.
+					<b>硕士</b>, <a href="http://english.dhu.edu.cn/">东华大学
+					</a>,计算机科学与技术学院, 2014.09-2017.03. 导师: 教授<a href="http://www.dhu.edu.cn/_t1865/e7/c5/c5961a59333/pagem.psp">乐嘉锦</a>.
 				</p>
 				<p>
-					<b>学士</b>, 计算机科学与技术学院, <a href="http://english.dhu.edu.cn/">东华大学
-					</a>, 2010.09-2014.06. (总绩点 3.76/5.0, 专业排名前5%)
+					<b>学士</b>,  <a href="http://english.dhu.edu.cn/">东华大学
+					</a>, 计算机科学与技术学院, 2010.09-2014.06. (总绩点 3.76/5.0, 专业排名前5%)
 				</p>
 
 				<h3>
@@ -164,19 +164,19 @@
 					Awards
 				</h3>
 				<p>
-					<li> <a href="http://www.aston.ac.uk/scholarships/phd-studentships-and-scholarships/anniversary-prize-researchers/">校长国际奖学金</a>(￡30000)&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2017.06</li>
+					<li> <a href="http://www.aston.ac.uk/scholarships/phd-studentships-and-scholarships/anniversary-prize-researchers/">校长国际奖学金</a>(￡30000)&nbsp;2017.06</li>
 					<li>上海市优秀毕业生 2017.03</li>
-				<li>东华大学学术之星候选人;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2016.12</li>
-				<li>研究生国家奖学金(￥20000)&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2016.10</li>
+				<li>东华大学学术之星候选人&nbsp;2016.12</li>
+				<li>研究生国家奖学金(￥20000)&nbsp;2016.10</li>
 				<li>上海市优秀毕业生 2014.06</li>
 				<li>国家信息技术应用大赛二等奖 2013.12</li>
-				<li>国家移动网络工程师证书&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2013.12</li>
-				<li>东华大学学科竞赛奖学金&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2013.12</li>
-				<li>恒逸奖学金&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2012-2013</li>
-				<li>东华大学优秀学生荣誉称号&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2012-2013</li>
-				<li>东华大学奖学金(￥3000)&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2012-2013</li>
-				<li>东华大学优秀学生荣誉称号&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2011-2012</li>
-				<li>东华大学奖学金(￥3000)&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2011-2012</li>
+				<li>国家移动网络工程师证书&nbsp;2013.12</li>
+				<li>东华大学学科竞赛奖学金&nbsp;2013.12</li>
+				<li>恒逸奖学金&nbsp;2012-2013</li>
+				<li>东华大学优秀学生荣誉称号&nbsp;2012-2013</li>
+				<li>东华大学奖学金(￥3000)&nbsp;2012-2013</li>
+				<li>东华大学优秀学生荣誉称号&nbsp;2011-2012</li>
+				<li>东华大学奖学金(￥3000)&nbsp;2011-2012</li>
 				</p>
 				<h3>
 					<a id="authors-and-contributors" class="anchor"
@@ -193,9 +193,9 @@
 				<li>厨艺: 中餐.</li>
 				<li>体育: 健身.</li>
 				<li>GRE: 311. Verbal Reading:148, Quantative Reasoning:163, Analytical Writing: 3</li>
-				<li>TOEFL: 95. Reading:27, Listening:25, Speaking:19, Writing: 24</li>
-				<li>CET-6: 492. Reading:200, Listening:171, Comprehensive:30, Writing:91</li>
-				<li>CST-4: 559</li>
+				<li>托福: 95. Reading:27, Listening:25, Speaking:19, Writing: 24</li>
+				<li>六级: 492. Reading:200, Listening:171, Comprehensive:30, Writing:91</li>
+				<li>四级: 559</li>
 				</p>
 			</section>
 
