--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 			<h2 align="right">Ruidong Xue</h2>
 			<!-- <a href="https://github.com/gite360/RuidongXue" class="button"><img
 				class="img1" src="images/RuidongXue.jpg" art=""></a> -->
+			<li> <a href="https://gite360.github.io/RuidongXue/cn.html">中文</li>
 		</div>
 	</header>
 
@@ -177,30 +178,29 @@
 					Awards
 				</h3>
 				<p>
-					<li> <a href="http://www.aston.ac.uk/scholarships/phd-studentships-and-scholarships/anniversary-prize-researchers/">Vice-Chancellor’s International Scholarship</a>(￡30000)&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2017.06</li>
-					<li> <a href="https://gite360.github.io/RuidongXue/cn.html">Vice-Chancellor’s International Scholarship</a>(￡30000)&nbsp;&nbsp;&nbsp;2017.06</li>
+					<li> <a href="http://www.aston.ac.uk/scholarships/phd-studentships-and-scholarships/anniversary-prize-researchers/">Vice-Chancellor’s International Scholarship</a>(￡30000)&nbsp;2017.06</li>
 					<li>Graduated with honor: University Graduate Excellence Award of Shanghai City 2017.03</li>
 				<li>The honorary title of Candidate DHU
-					Academic-Star&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2016.12</li>
+					Academic-Star&nbsp;2016.12</li>
 				<li>National Scholarship for Master's
-					Degree(￥20000)&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2016.10</li>
+					Degree(￥20000)&nbsp;2016.10</li>
 				<li>Graduated with honor: University Graduate Excellence Award of Shanghai City 2014.06</li>
 				<li>Second Prize in China for Application of Information
 					Technology 2013.12</li>
 				<li>Engineer Certificate of National Certified for Mobile
-					Internet&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2013.12</li>
+					Internet&nbsp;2013.12</li>
 				<li>Donghua University Subject Competition
-					Scholarship&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2013.12</li>
+					Scholarship&nbsp;2013.12</li>
 				<li>Hengyi
-					Scholarship&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2012-2013</li>
+					Scholarship&nbsp;2012-2013</li>
 				<li>Donghua University Excellent
-					Student&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2012-2013</li>
+					Student&nbsp;2012-2013</li>
 				<li>Donghua University
-					Scholarship(￥3000)&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2012-2013</li>
+					Scholarship(￥3000)&nbsp;2012-2013</li>
 				<li>Donghua University Excellent
-					Student&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2011-2012</li>
+					Student&nbsp;2011-2012</li>
 				<li>Donghua University
-					Scholarship(￥3000)&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2011-2012</li>
+					Scholarship(￥3000)&nbsp;2011-2012</li>
 				</p>
 				<h3>
 					<a id="authors-and-contributors" class="anchor"
