--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 			<h2 align="right">Ruidong Xue</h2>
 			<!-- <a href="https://github.com/gite360/RuidongXue" class="button"><img
 				class="img1" src="images/RuidongXue.jpg" art=""></a> -->
-			<li> <a href="https://gite360.github.io/RuidongXue/cn.html">中文</li>
+			<h2 align="right"> <a href="https://gite360.github.io/RuidongXue/cn.html">中文</h2>
 		</div>
 	</header>
 
