--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		else{    localStorage.pagecount=1;}document.write("Visit times: " + localStorage.pagecount + " time(s).");
 	</script>
 	
-	
+	<a href="https://gite360.github.io/RuidongXue/cn.html">中文
 	
 	<header>
 		<div class="inner">
@@ -36,7 +36,7 @@
 			<h2 align="right">Ruidong Xue</h2>
 			<!-- <a href="https://github.com/gite360/RuidongXue" class="button"><img
 				class="img1" src="images/RuidongXue.jpg" art=""></a> -->
-			<h2 align="right"> <a href="https://gite360.github.io/RuidongXue/cn.html">中文</h2>
+			
 		</div>
 	</header>
 
