Add honor title

--- a/index.html
+++ b/index.html
@@ -193,11 +193,11 @@
 					Scholarship&nbsp;2013.12</li>
 				<li>Hengyi
 					Scholarship&nbsp;2012-2013</li>
-				<li>Donghua University Excellent
+				<li>Honor Title: Donghua University Excellent
 					Student&nbsp;2012-2013</li>
 				<li>Donghua University
 					Scholarship(￥3000)&nbsp;2012-2013</li>
-				<li>Donghua University Excellent
+				<li>Honor Titile: Donghua University Excellent
 					Student&nbsp;2011-2012</li>
 				<li>Donghua University
 					Scholarship(￥3000)&nbsp;2011-2012</li>
