--- a/cn.html
+++ b/cn.html
@@ -28,6 +28,8 @@
 		else{    localStorage.pagecount=1;}document.write("Visit times: " + localStorage.pagecount + " time(s).");
 	</script>
 	
+	<a href="https://gite360.github.io/RuidongXue">English
+	
 	<header>
 		<div class="inner">
 			<h1 align="right">个人主页</h1>
