--- a/cn.html
+++ b/cn.html
@@ -90,7 +90,7 @@
 				<p>
 					Ruidong Xue, <!-- <a href="https://github.com/gite360/RuidongXue/blob/master/images/ICCCI_RuidongXue.pdf"> -->
 					<a href="http://miun.diva-portal.org/smash/record.jsf?pid=diva2%3A974561&dswid=5962">
-						“Improved association rule mining to sensor time series”.</a> 毕设大报告 (硕士 (两年制)), 20 credits / 30 HE credits.
+						“Improved association rule mining to sensor time series”.</a> 中瑞典大学毕设报告 (两年制硕士), 20 credits / 30 HE credits.
 				</p>
 
 				<h3>
@@ -104,7 +104,7 @@
 				</p>
 				
 				<p>
-					<b>硕士</b> (交换生), <a href="https://www.miun.se/en/"> 中瑞典大学 </a>,信息与通信系  2015.08-2016.06. 导师: 教授<a href="https://www.miun.se/en/personnel/tingtingzhang/"> 张婷婷 </a>.
+					<b>硕士</b> (合作项目), <a href="https://www.miun.se/en/"> 中瑞典大学 </a>,信息与通信系  2015.08-2016.06. 导师: 教授<a href="https://www.miun.se/en/personnel/tingtingzhang/"> 张婷婷 </a>.
 				</p>
 				<p>
 					<b>硕士</b>, <a href="http://english.dhu.edu.cn/">东华大学
@@ -190,12 +190,12 @@
 				<li>班长, 2014.09-2015.08.</li>
 				<li>计算机科学与技术学院外联部部长,2014.09-2015.03.</li>
 				<li>东华大学建校60周年校庆志愿者,2011.10.</li>
-				<li>语言: 英语 (工作语言e) & 普通话 (母语)</li>
+				<li>语言: 英语 (工作语言) & 普通话 (母语)</li>
 				<li>C1 驾照</li>
 				<li>厨艺: 中餐.</li>
 				<li>体育: 健身.</li>
 				<li>GRE: 311. Verbal Reading:148, Quantative Reasoning:163, Analytical Writing: 3</li>
-				<li>托福: 95. Reading:27, Listening:25, Speaking:19, Writing: 24</li>
+				<li>托福: 95. 读:27, 听:25, 说:19, 写: 24</li>
 				<li>六级: 492. Reading:200, Listening:171, Comprehensive:30, Writing:91</li>
 				<li>四级: 559</li>
 				</p>
