--- a/cn.html
+++ b/cn.html
@@ -28,7 +28,7 @@
 		else{    localStorage.pagecount=1;}document.write("Visit times: " + localStorage.pagecount + " time(s).");
 	</script>
 	
-	<a href="https://gite360.github.io/RuidongXue">English
+	<a href="https://gite360.github.io/RuidongXue">English</a>
 	
 	<header>
 		<div class="inner">
