--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		else{    localStorage.pagecount=1;}document.write("Visit times: " + localStorage.pagecount + " time(s).");
 	</script>
 	
-	<a href="https://gite360.github.io/RuidongXue/cn.html">中文
+	<a href="https://gite360.github.io/RuidongXue/cn.html">中文</a>
 	
 	<header>
 		<div class="inner">
