--- a/cn.html
+++ b/cn.html
@@ -21,7 +21,17 @@
 <title>薛瑞东</title>
 
 </head>
+	
+<!-- Global Site Tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=GA_TRACKING_ID"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'GA_TRACKING_ID');
+</script>
+	
 <body>
 	<script type="text/javascript">
                 if (localStorage.pagecount){    localStorage.pagecount=Number(localStorage.pagecount) +1;}
