--- a/index.html
+++ b/index.html
@@ -157,6 +157,13 @@ ga('send', 'pageview');
 				</p>
 				
 				<p>
+					<b>2018.01-2019.12, QR Progression</b> for <a href="#top">Qualify Report</a> Progression and <a href="#top">VIVA Voce Examination</a> - Dr. Weiren Yu
+					, Group of Computer Science, Aston University.
+					<!-- <li>&nbsp;&nbsp;&nbsp;&nbsp;Data mining to the examination and
+					diagnostic testing data.</li> -->
+				</p>
+				
+				<p>
 					<b>2018.12-2019.01, Teaching Assistant</b> for (2018-19 CS1060) Computational Reasoning and Communication - Dr. Weiren Yu
 					, Group of Computer Science, Aston University.
 					<!-- <li>&nbsp;&nbsp;&nbsp;&nbsp;Data mining to the examination and
