Add workshop in CV

--- a/index.html
+++ b/index.html
@@ -157,7 +157,13 @@ ga('send', 'pageview');
 				</p>
 				
 				<p>
-					<b>2018.01-2018.10, QR Progression</b> for <a href="https://github.com/gite360/RuidongXue/blob/master/images/180706LiteratureReview.pdf">Qualify Report</a> Progression and <a href="https://github.com/gite360/RuidongXue/blob/master/images/181016QR.pdf">VIVA Voce Examination</a> - Dr. Weiren Yu
+					<b>2019.01.09-2019.01.011, SMART INDUSTRY WORKSHOP - Recent Advances in Industrial Digitalisation, Robotics and Automation</b> for <a href="http://smartindustry4.uk/">-Nottingham Trent University, Nottingham, UK.
+					<!-- <li>&nbsp;&nbsp;&nbsp;&nbsp;Data mining to the examination and
+					diagnostic testing data.</li> -->
+				</p>
+				
+				<p>
+					<b>2018.01-2018.10, Qualify Report Progression</b> for <a href="https://github.com/gite360/RuidongXue/blob/master/images/180706LiteratureReview.pdf">Qualify Report</a> Progression and <a href="https://github.com/gite360/RuidongXue/blob/master/images/181016QR.pdf">VIVA Voce Examination</a> - Dr. Weiren Yu
 					, Group of Computer Science, Aston University.
 					<!-- <li>&nbsp;&nbsp;&nbsp;&nbsp;Data mining to the examination and
 					diagnostic testing data.</li> -->
@@ -216,6 +222,7 @@ ga('send', 'pageview');
 					Awards
 				</h3>
 				<p>
+					<li> <a href="http://smartindustry4.uk/?page_id=325/">Smart Industry Workshop scholarships sponsored by the EPSRC Network Plus</a>(including registration fees(￡275), access to tea/coffee breaks, lunches,  accommodations and travel(￡200) for three days)&nbsp;2013.01</li>
 					<li> <a href="http://www.aston.ac.uk/scholarships/phd-studentships-and-scholarships/anniversary-prize-researchers/">Vice-Chancellor’s International Scholarship</a>(￡30000)&nbsp;2017.06</li>
 					<li>Graduated with honor: University Graduate Excellence Award of Shanghai City 2017.03</li>
 				<li>The honorary title of Candidate DHU
