--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ ga('send', 'pageview');
 				</p>
 				
 				<p>
-					<b>2019.01.09-2019.01.011, SMART INDUSTRY WORKSHOP - Recent Advances in Industrial Digitalisation, Robotics and Automation</b> for <a href="http://smartindustry4.uk/">-Nottingham Trent University, Nottingham, UK.
+					<b>2019.01.09-2019.01.011, <a href="http://smartindustry4.uk/">SMART INDUSTRY WORKSHOP</a></b> - Recent Advances in Industrial Digitalisation, Robotics and Automation-Nottingham Trent University, Nottingham, UK.
 					<!-- <li>&nbsp;&nbsp;&nbsp;&nbsp;Data mining to the examination and
 					diagnostic testing data.</li> -->
 				</p>
