--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@ ga('send', 'pageview');
 				
 				<p>
 					<b>2019.01.09-2019.01.011, <a href="http://smartindustry4.uk/">SMART INDUSTRY WORKSHOP</a></b> - Recent Advances in Industrial Digitalisation, Robotics and Automation-Nottingham Trent University, Nottingham, UK.<button onclick="myFunction()">Photo</button>
-					<div id="myDIV">This is my DIV element.</div>
+					<div id="myDIV"><img id="SmartIndustry" src="SmartIndustry190109.png"></div>
 					<!-- <li>&nbsp;&nbsp;&nbsp;&nbsp;Data mining to the examination and
 					diagnostic testing data.</li> -->
 				</p>
