--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@ ga('send', 'pageview');
 					<div id="myDIV"><img id="SmartIndustry" src="https://github.com/gite360/RuidongXue/tree/master/images/Workshop190109.jpg" width="500" height="600" alt="None picture"></div>
 					<!-- <li>&nbsp;&nbsp;&nbsp;&nbsp;Data mining to the examination and
 					diagnostic testing data.</li> -->
-				         <img id="SmartIndustry" src="https://github.com/gite360/RuidongXue/tree/master/images/Workshop190109.jpg" width="500" height="600" alt="None picture">
+				         <img id="SmartIndustry" src="/images/Workshop190109.jpg" width="500" height="600" alt="None picture">
 				</p>
 				
 				<p>
