--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@ ga('send', 'pageview');
 					<!-- <li>&nbsp;&nbsp;&nbsp;&nbsp;Data mining to the examination and
 					diagnostic testing data.</li> -->
 				         <img id="SmartIndustry" src="/images/Workshop190109.jpg" width="500" height="600" alt="None picture">
-				         <img class="img1" src="/images/Trent.jpg" art="">
+				         <img class="img1" src="/images/RuidongXue.jpg" art="">
 				</p> 
 				
 				<p>
