--- a/index.html
+++ b/index.html
@@ -172,8 +172,8 @@ ga('send', 'pageview');
 					<div id="myDIV"><img id="SmartIndustry" src="https://github.com/gite360/RuidongXue/tree/master/images/Workshop190109.jpg" width="500" height="600" alt="None picture"></div>
 					<!-- <li>&nbsp;&nbsp;&nbsp;&nbsp;Data mining to the examination and
 					diagnostic testing data.</li> -->
-				         <img id="SmartIndustry" src="/images/Workshop190109.jpg" width="500" height="600" alt="None picture">
-				         <img class="img1" src="/images/RuidongXue.jpg" art="">
+				         <img class="img" src="/images/Workshop190109.jpg" width="500" height="600" alt="None picture">
+				         <img class="img" src="/images/RuidongXue.jpg" art="">
 				</p> 
 				
 				<p>
