solve image disapear

--- a/index.html
+++ b/index.html
@@ -169,11 +169,9 @@ ga('send', 'pageview');
 				
 				<p>
 					<b>2019.01.09-2019.01.011, <a href="http://smartindustry4.uk/">SMART INDUSTRY WORKSHOP</a></b> - Recent Advances in Industrial Digitalisation, Robotics and Automation-Nottingham Trent University, Nottingham, UK.<button onclick="myFunction()">Photo</button>
-					<div id="myDIV"><img id="SmartIndustry" src="images/Workshop190109.jpg" width="500" height="600" alt="None picture"></div>
+					<div id="myDIV"><img id="SmartIndustry" src="images/Workshop190109.jpg" alt="None picture"></div>
 					<!-- <li>&nbsp;&nbsp;&nbsp;&nbsp;Data mining to the examination and
 					diagnostic testing data.</li> -->
-				         <img class="img" src="images/Workshop190109.jpg" width="500" height="600" alt="None picture">
-				         <img class="img" src="images/RuidongXue.jpg" art="">
 				</p> 
 				
 				<p>
