Add Chinese page

--- a/cn.html
+++ b/cn.html
@@ -201,6 +201,7 @@ ga('send', 'pageview');
 					Awards
 				</h3>
 				<p>
+					<li> <a href="http://smartindustry4.uk/?page_id=325/">EPSRC网＋资助的智慧工业研讨会奖学金</a>(包括三天的注册费(￡275), 茶水费, 午餐, 交通和住宿费(￡200))&nbsp;2019.01</li>
 					<li> <a href="http://www.aston.ac.uk/scholarships/phd-studentships-and-scholarships/anniversary-prize-researchers/">校长国际奖学金</a>(￡30000)&nbsp;2017.06</li>
 					<li>上海市优秀毕业生 2017.03</li>
 				<li>东华大学学术之星候选人&nbsp;2016.12</li>
