--- a/cn.html
+++ b/cn.html
@@ -49,6 +49,17 @@ ga('send', 'pageview');
 		else{    localStorage.pagecount=1;}document.write("Visit times: " + localStorage.pagecount + " time(s).");
 	</script>
 	
+	<script>
+          	function myFunction() {
+  			var x = document.getElementById("myDIV");
+  			if (x.style.display === "none") {
+    				x.style.display = "block";
+  			} else {
+    				x.style.display = "none";
+  			}
+		}
+	</script>
+	
 	<a href="https://gite360.github.io/RuidongXue">English</a>
 	
 	<header>
@@ -148,6 +159,12 @@ ga('send', 'pageview');
 					<!--<li>&nbsp;&nbsp;&nbsp;&nbsp;Temporal association rule mining to
 					time series.</li>  -->
 				</p>
+				
+				<b>2019.01.09-2019.01.011, <a href="http://smartindustry4.uk/">智慧工业讨论会</a></b> - 工业数字化, 机器人与自动化近况-诺丁汉, 英国.<button onclick="myFunction()">照片</button>
+					<div id="myDIV">
+						<img id="SmartIndustry" src="images/Workshop190109.jpg" alt="None picture">
+						<img id="Trent" src="images/Trent.jpg" alt="None picture">
+				        </div>
 				
 				<p>
 					<b>2018.01-2018.10, 攻博资质认证</b> for <a href="https://github.com/gite360/RuidongXue/blob/master/images/180706LiteratureReview.pdf">攻博资质</a> 认证 and <a href="https://github.com/gite360/RuidongXue/blob/master/images/181016QR.pdf">现场答辩</a> - Weiren Yu博士
