hide image first

--- a/index.html
+++ b/index.html
@@ -3,6 +3,17 @@
 <head>
 <!-- Global Site Tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-127971961-1"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	
+<script>
+$(document).ready(function(){
+  $("button").click(function(){
+    $("p").toggle(1000);
+  });
+});
+</script>
+	
+	
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
