--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <script>
 $(document).ready(function(){
   $("button").click(function(){
-    $("image").toggle(1000);
+    $("img").toggle(1000);
   });
 });
 </script>
