--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@ ga('send', 'pageview');
 				
 				<p>
 					<b>2019.01.09-2019.01.011, <a href="http://smartindustry4.uk/">SMART INDUSTRY WORKSHOP</a></b> - Recent Advances in Industrial Digitalisation, Robotics and Automation-Nottingham Trent University, Nottingham, UK.<button onclick="myFunction()">Photo</button>
-					<div id="myDIV">
+					<div id="myDIV", style="display:none;>
 						<img id="SmartIndustry" src="images/Workshop190109.jpg" alt="None picture">
 						<img id="Trent" src="images/Trent.jpg" alt="None picture">
 				        </div>
