hide photo first

--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-127971961-1"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	
-<script>
+<!--<script>
 $(document).ready(function(){
   $("button").click(function(){
     $("img").toggle(1000);
   });
 });
-</script>
+</script>-->
 	
 	
 <script>
