--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ ga('send', 'pageview');
 					<b>Marital Status:</b> Single
 				</p>
 				<a
-					href="https://github.com/gite360/RuidongXue/blob/master/images/CV_Ruidong Xue.pdf"
+					href="https://github.com/gite360/RuidongXue/blob/master/images/CV190424.pdf"
 					class="button"> <small>Download</small> My CV.pdf
 				</a>
 				<a
