--- a/cn.html
+++ b/cn.html
@@ -90,7 +90,7 @@ ga('send', 'pageview');
 					<b>状态:</b> 单身
 				</p>
 				<a
-					href="https://github.com/gite360/RuidongXue/blob/master/images/CV_Ruidong Xue.pdf"
+					href="https://github.com/gite360/RuidongXue/blob/master/images/CV190424.pdf"
 					class="button"> <small>Download</small> 个人简历.pdf
 				</a>
 				<a
